--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,43 +12,47 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.3",
+    "@react-google-maps/api": "^2.20.7",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@types/leaflet": "^1.9.21",
+    "axios": "^1.6.2",
+    "date-fns": "^3.0.6",
+    "framer-motion": "^10.16.16",
+    "i18next": "^23.7.11",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4",
-    "axios": "^1.6.2",
-    "socket.io-client": "^4.6.1",
     "react-hook-form": "^7.49.2",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.3",
-    "tailwindcss": "^3.4.0",
-    "styled-components": "^6.1.8",
-    "framer-motion": "^10.16.16",
-    "recharts": "^2.10.3",
-    "date-fns": "^3.0.6",
+    "react-i18next": "^14.0.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
-    "i18next": "^23.7.11",
-    "react-i18next": "^14.0.0"
+    "recharts": "^2.10.3",
+    "socket.io-client": "^4.6.1",
+    "styled-components": "^6.1.8",
+    "tailwindcss": "^3.4.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/node": "^20.10.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.8",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
+    "cypress": "^13.6.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "cypress": "^13.6.2"
+    "postcss": "^8.4.32",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.8"
   }
 }
