--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.16.16",
-    "i18next": "^23.7.11",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
-    "react-i18next": "^14.0.0",
+    "react-i18next": "^14.1.3",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.0.4",
